Closed
Bug 1009788
Opened 11 years ago
Closed 11 years ago
Assertion failure: js::CurrentThreadCanAccessRuntime(runtime_), at dist/include/js/HeapAPI.h
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: gkw, Assigned: jonco)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: [jsbugmon:update])
Attachments
(3 files)
|
7.05 KB,
text/plain
|
Details | |
|
1.12 KB,
patch
|
terrence
:
review+
|
Details | Diff | Splinter Review |
|
805 bytes,
patch
|
jonco
:
review+
|
Details | Diff | Splinter Review |
for (var a = 0; a < 9999; a++) {
Array.buildPar(999, (function() {
return {}
}))
}
asserts js debug shell on m-c changeset 110c1d68450a without any CLI arguments at Assertion failure: js::CurrentThreadCanAccessRuntime(runtime_), at dist/include/js/HeapAPI.h
My configure flags are:
CC="clang -Qunused-arguments" CXX="clang++ -Qunused-arguments" AR=ar sh /Users/skywalker/trees/mozilla-central/js/src/configure --target=x86_64-apple-darwin12.5.0 --enable-optimize --enable-debug --enable-profiling --enable-gczeal --enable-debug-symbols --disable-tests --with-ccache --enable-threadsafe <other NSPR options>
=== Tinderbox Build Bisection Results by autoBisect ===
The "good" changeset has the timestamp "20140512030904" and the hash "ff77189e55df".
The "bad" changeset has the timestamp "20140512035427" and the hash "7bad7731a849".
Likely regression window: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=ff77189e55df&tochange=7bad7731a849
Jon, is bug 988486 a likely regressor?
Flags: needinfo?(jcoppeard)
Updated•11 years ago
|
Whiteboard: [jsbugmon:update] → [jsbugmon:]
Comment 1•11 years ago
|
||
JSBugMon: Cannot process bug: Error: Failed to compile specified revision 110c1d68450a (maybe try another?)
Updated•11 years ago
|
Whiteboard: [jsbugmon:] → [jsbugmon:update]
| Assignee | ||
Comment 2•11 years ago
|
||
Yes, I broke this because I didn't realise that js::TriggerZoneGC() could be called off main thread.
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
| Assignee | ||
Comment 3•11 years ago
|
||
Attachment #8422349 -
Flags: review?(terrence)
Comment 4•11 years ago
|
||
Oh good, I ran into this one as well yesterday.
Comment 5•11 years ago
|
||
Comment on attachment 8422349 [details] [diff] [review]
bug1009788-triggerGcOffMainThread
Review of attachment 8422349 [details] [diff] [review]:
-----------------------------------------------------------------
r=me
Attachment #8422349 -
Flags: review?(terrence) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Comment 7•11 years ago
|
||
Attachment #8424558 -
Flags: review?(jcoppeard)
| Assignee | ||
Comment 8•11 years ago
|
||
Comment on attachment 8424558 [details] [diff] [review]
don't fail when parallelJS gets shut off on aurora
Review of attachment 8424558 [details] [diff] [review]:
-----------------------------------------------------------------
Ah yes, thanks for catching that.
Attachment #8424558 -
Flags: review?(jcoppeard) → review+
Comment 9•11 years ago
|
||
Comment 10•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•