Bug 1009788 - Allow js::TriggerZoneGC() to be called from parallel threads again r=terrence