js/src/jit-test/tests/parallel/bug1009788.js
@@ -1,0 +1,5 @@
+for (var a = 0; a < 2000; a++) {
+    Array.buildPar(500, (function() {
+        return {}
+    }))
+}
